# sg-awg-panel

./: .gitattributes  .gitignore  01-install-sg-awg-node.sh  02-connect-sg-awg-node.sh  CHANGELOG.md  README.md  RELEASE-NOTES-0.7.0-RC3.md  RELEASE-NOTES-0.7.0-RC4.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-1.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-2.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-3.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-4.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-5.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-6.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-7.md  RELEASE-NOTES-0.7.0-RC5-BUILD-FIX-8.md  RELEASE-NOTES-0.7.0-RC5.md  RELEASE-NOTES-0.7.0-RC6.md  RELEASE-NOTES-201.md  RELEASE-NOTES-202.md  RELEASE-NOTES-203.md  RELEASE-NOTES-204.md  RELEASE-NOTES-205.md  RELEASE-NOTES-206.md  RELEASE-NOTES-207.md  RELEASE-NOTES-208.md  RELEASE-NOTES-210.md  RELEASE-NOTES-211.md  RELEASE-NOTES-RC5-HOTFIX1.md  RELEASE-NOTES-RC5-HOTFIX2.md  RELEASE-NOTES-RC5-HOTFIX3.md  RELEASE-NOTES-RC5.md  RELEASE-NOTES-v0.1.0-alpha1.md  RELEASE-NOTES-v0.1.0-alpha2.md  RELEASE-NOTES-v0.1.0-alpha3.md  RELEASE-NOTES-v0.1.0-alpha4.md  RELEASE-NOTES-v0.1.0-alpha5.md  RELEASE-NOTES-v0.1.0-alpha6.md  RELEASE-NOTES-v0.1.0-alpha7.md  RELEASE-NOTES-v0.1.0-alpha8.md  (+11 more)
awgpanel/: __init__.py  admin_cli.py  cascade.py  cli.py  cluster_cascade.py  config_manager.py  core.py  db.py  egress.py  errors.py  geography.py  json_editors.py  node_clients.py  node_manager.py  operation_jobs.py  outbounds.py  server_profiles.py  traffic.py  traffic_controls.py  traffic_modes.py  traffic_rules.py  web.py
deploy/: configure-panel-access.sh  (+21 more)
(+123 files in other folders)
