[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sg-awg-panel"
version = "0.1.0rc4"
description = "Lightweight native web panel for AmneziaWG 2.0"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0,<4",
  "waitress>=3.0,<4",
]

[project.scripts]
awgpanel = "awgpanel.cli:main"

[tool.setuptools]
packages = ["awgpanel"]
include-package-data = true

[tool.setuptools.package-data]
awgpanel = ["templates/*.html", "static/*"]
